@@ -5,12 +5,16 @@ Code and stuff:
 Bugs and ideas:
  * Sergei Sarbash <sarbash.s@gmail.com>
  * Julien Valroff <julien@kirya.net>
+ * Iffan Arzanul Haq <arzanulhaq@gmail.com>
 
 Packages:
  - Arch Linux:
   * Victor Feight <vrfeight3@gmail.com>
+  * jsteel <jsteel@vorx.com>
  - Gentoo Linux:
   * Joshua Saddler <nightmorph@gentoo.org>
   * maelnor
- - Fedora Linux
+ - Fedora Linux:
   * Filip Pytloun <filip.pytloun@stickfish.com>
+ - Debian:
+  * Julien Valroff <julien@debian.org>
